src/OpenCvSharp/.PInvoke/traking/NativeMethods_tracking_MultiTracker.cs

using System;
using System.Runtime.InteropServices;

#pragma warning disable 1591

namespace OpenCvSharp
{
    static partial class NativeMethods
    {
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern IntPtr tracking_MultiTracker_create();

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tracking_Ptr_MultiTracker_delete(IntPtr ptr);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern IntPtr tracking_Ptr_MultiTracker_get(IntPtr ptr);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int tracking_MultiTracker_add1(IntPtr obj, IntPtr newTracker, IntPtr image,
            Rect2d boundingBox);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int tracking_MultiTracker_add2(IntPtr obj, IntPtr[] newTrackers, int newTrackersLength,
            IntPtr image, Rect2d[] boundingBox, int boundingBoxLength);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int tracking_MultiTracker_update1(IntPtr obj, IntPtr image);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int tracking_MultiTracker_update2(IntPtr obj, IntPtr image, IntPtr boundingBox);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tracking_MultiTracker_getObjects(IntPtr obj, IntPtr boundingBox);
    }
}